[project]
name = "m"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "mm-chat",
    "mm-read",
    "muspi-merol",
    "ruff~=0.8.0",
]

[tool.uv.sources]
muspi-merol = { workspace = true }
mm-chat = { workspace = true }
mm-read = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]
